# pdfvault

./: CMakeLists.txt  README.md  main
.cache/clangd/index/: ds.h.DE39144C6225D4AB.idx  main.c.B970CE20A5892B6E.idx
src/: main.c  main.cpp  main_old.c
